# subtracker

./: readme.md
.github/workflows/: build_frontend.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: api.py  models.py  schema.py
backend/app/migrations/: 0001_initial.py  0002_subscribemodel_cycle_begin_subscribemodel_cycle_end_and_more.py
backend/common/: auth.py  schema.py
backend/config/: db_config.py  settings.py  urls.py
docs/: index.html
docs/assets/: index.255a9bcf.css  index.5de3b923.js  vendor.3dcbbd06.js  vendor.c9d6a7fa.css
frontend/: .env  index.html  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  utils.ts
frontend/src/api/: index.ts  request.ts
frontend/src/components/: Creation.vue  Edit.vue  Login.vue
frontend/src/plugins/: vant.ts
frontend/src/schema/: index.ts
frontend/src/use/: index.ts
